force-app/main/default/objects/Storage_Location__c/fields/Clinic__c.field-meta.xml
<CustomField>
    <fullName>Clinic__c</fullName>
    <label>Clinic</label>
    <referenceTo>Clinics__c</referenceTo>
    <relationshipLabel>Storage Locations</relationshipLabel>
    <relationshipName>Storage_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>