force-app/main/default/objects/Storage_Location__c/fields/Location_Tank__c.field-meta.xml
<CustomField>
    <fullName>Location_Tank__c</fullName>
    <label>Location Tank</label>
    <length>80</length>
    <type>Text</type>
</CustomField>