force-app/main/default/objects/Storage_Location__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Storage_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>