force-app/main/default/objects/Storage_Location__c/fields/Storage_Location_Risk__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location_Risk__c</fullName>
    <label>Storage Location Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>QUARANTINE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>