force-app/main/default/objects/Storage_Location__c/listViews/All_Storage_Locations.listView-meta.xml
<ListView>
    <fullName>All_Storage_Locations</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>OwnerId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Storage Locations</label>
</ListView>